[project]
name = "p2bp-postprocessing"
version = "0.1.0"
description = "AWS EC2 queue worker that consumes jobs from a Cloudflare Queue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.36",
    "cloudflare>=5.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
pull-queue = "pull_queue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["config.py", "pull_queue.py", "r2.py"]
