[project]
name = "p2bp-postprocessing"
version = "0.1.0"
description = "AWS EC2 queue worker that consumes jobs from a Cloudflare Queue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.36",
    "cloudflare>=5.4.0",
    "laspy>=2.5.4",
    "lazrs>=0.6.3",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.11.0.86",
    "pyproj>=3.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.14.0",
]

[project.scripts]
pull-queue = "pull_queue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["config.py", "pull_queue.py", "r2.py", "scanproject_merger"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-randomly>=4.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
